# vt_town_plan

./: .gitignore  README.md  convert_to_prosemirror.py  extract.py  index_prosemirror_chapter.py  load_prosemirror_to_db.py  models.py  pyproject.toml  query_index.py  ruff.toml  search.py
docker/: db.yml
docker/init/: init.sql
elements/: __init__.py  action.py  action_table.py  caption.py  document_section.py  goals_2050.py  image.py  paragraph.py  public_engagement.py  structured_document.py  table.py  three_facts.py
parsers/: action_table_parser.py  goals_table_parser.py  table_parsers.py
test/: test_chapter_files_output.py
v1/: README_prosemirror.md  index_chapter.py  query_index.py
v1/elements/: __init__.py  action_table.py  fact.py  goals_2050.py  heading.py  objective.py  public_engagement.py  strategy.py  structured_document.py  three_facts.py
v1/parsers/: facts_table_parser.py
