[project]
name = "vt-town-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.21.0", # Still compatible with transformers 4.30.2
    "numpy<2.0",
    "python-docx==0.8.11",
    "sentence-transformers==2.2.2",
    "torch==2.0.1",
    "transformers==4.30.2",
    "huggingface_hub==0.16.4",
    "psycopg>=3.2.9",
    "lxml>=5.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
